# Esp32WifiSerial

./: .gitmodules  README-zh.md  README.md  sdkconfig.defaults
components/usbipdcpp/: CMakeLists.txt  idf_component.yml
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
main/include/: config_serial.h  transparent_serial.h  wifi_serial_manager.h
main/src/: config_serial.cpp  main.cpp  transparent_serial.cpp  wifi_serial_manager.cpp
